# tap-s3-gregorys

./: .gitignore  README.md  config.sample.json  pyproject.toml
.circleci/: config.yml
tap_s3/: __init__.py  client.py  discover.py  streams.py  sync.py  utils.py
tap_s3/schemas/: menu_export.json
tests/: conftest.py  test_client.py  test_discover.py  test_streams.py  test_sync.py  test_tap_s3.py  test_utils.py
